[workspace]
members = [".", "proc-macro"]

[package]
name = "fatality"
version = "0.0.3"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
edition = "2021"
description = "Fatality extension to `thiserror::Error`"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/drahnr/fatality.git"

[dependencies]
fatality-proc-macro = { version = "0.0.3", path = "./proc-macro" }
thiserror = "1.0"

[dev-dependencies]
trybuild = "1.0"
thiserror = "1.0"
log = "0.4"
assert_matches = "1"

[features]
default = []
expand = ["fatality-proc-macro/expand"]
