[package]
name = "fatality-proc-macro"
version = "0.0.7"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
edition = "2021"
description = "Fatality extension to crate thiserror - proc-macro part"
repository = "https://github.com/drahnr/fatality.git"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.82", features = ["full", "extra-traits"], default-features = false }
proc-macro2 = "1.0"
quote = "1.0"
thiserror = "1.0.30"
proc-macro-crate = "3.1"
indexmap = "2"
expander = "2"


[features]
default = []
expand = []
