[package]
name = "fatality-proc-macro"
version = "0.1.0"
authors = ["Bernhard Schuster <bernhard@ahoi.io>"]
edition = "2021"
description = "Fatality extension to crate thiserror - proc-macro part"
repository = "https://github.com/drahnr/fatality.git"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2", features = [
  "parsing",
  "printing",
  "full",
  "extra-traits",
] }
proc-macro-crate = "3.1"
indexmap = "2"
expander = "2"

[dev-dependencies]
assert_matches = "1"

[features]
default = []
expand = []
